#2471 [Fixed] Expandable: Overflow stays hidden when fully expanded

--- a/packages/core/src/components/expandable/expandable.scss
+++ b/packages/core/src/components/expandable/expandable.scss
@@ -2,7 +2,6 @@
 
 :host {
   display: block;
-  overflow-y: hidden;
 }
 
 :host(.dso-hide) {
@@ -17,6 +16,10 @@
 :host([open]) {
   position: inherit;
   visibility: inherit;
+}
+
+:host(:not([is-open])) {
+  overflow-y: hidden;
 }
 
 @include utilities.box-sizing();
